адаптивная верстка от 578 px

--- a/app/index.html
+++ b/app/index.html
@@ -339,7 +339,7 @@
             <footer class="footer">
                 <div class="footer__body">
                     <ul class="footer__menu">
-                        <li class="footer__menu-item"><span class="title">О думе</span></li>
+                        <li class="footer__menu-item"><span class="title">О думе</span> <img src="img/blocks/bley-arrow.png" class="footer__arrow" alt="" title=""></li>
                         <li class="footer__menu-item"><a class="footer__menu-link" href="#">Структура</a></li>
                         <li class="footer__menu-item"><a class="footer__menu-link" href="#">Аппарат УГД</a></li>
                         <li class="footer__menu-item"><a class="footer__menu-link" href="#">Регламент</a></li>
@@ -347,12 +347,12 @@
                         <li class="footer__menu-item"><a class="footer__menu-link" href="#">Муниципальная служба</a></li>
                     </ul>
                     <ul class="footer__menu">
-                        <li class="footer__menu-item"><span class="title">Депутаты</span></li>
+                        <li class="footer__menu-item"><span class="title">Депутаты</span> <img src="img/blocks/bley-arrow.png" class="footer__arrow" alt="" title=""></li>
                         <li class="footer__menu-item"><a class="footer__menu-link" href="#">Состав думы IV созыва</a></li>
                         <li class="footer__menu-item"><a class="footer__menu-link" href="#">Благодарности депутатам</a></li>
                     </ul>
                     <ul class="footer__menu">
-                        <li class="footer__menu-item"><span class="title">Деятельность</span></li>
+                        <li class="footer__menu-item"><span class="title">Деятельность</span> <img src="img/blocks/bley-arrow.png" class="footer__arrow" alt="" title=""></li>
                         <li class="footer__menu-item"><a class="footer__menu-link" href="#">Решения</a></li>
                         <li class="footer__menu-item"><a class="footer__menu-link" href="#">Постановления</a></li>
                         <li class="footer__menu-item"><a class="footer__menu-link" href="#">Постановления Главы города</a></li>
@@ -366,13 +366,13 @@
                         <li class="footer__menu-item"><a class="footer__menu-link" href="#">Проекты документов</a></li>
                     </ul>
                     <ul class="footer__menu">
-                        <li class="footer__menu-item"><span class="title">Приемная</span></li>
+                        <li class="footer__menu-item"><span class="title">Приемная</span> <img src="img/blocks/bley-arrow.png" class="footer__arrow" alt="" title=""></li>
                         <li class="footer__menu-item"><a class="footer__menu-link" href="#">Работа с обращениями граждан</a></li>
                         <li class="footer__menu-item"><a class="footer__menu-link" href="#">График приема избирателей депутатами УГД в общественной приёмной</a></li>
                         <li class="footer__menu-item"><a class="footer__menu-link" href="#">Ульяновская региональная общественная приемная лидера партии Единая Россия Д.А. Медведева</a></li>
                     </ul>
                     <ul class="footer__menu">
-                        <li class="footer__menu-item"><span class="title">Комитеты</span></li>
+                        <li class="footer__menu-item"><span class="title">Комитеты</span> <img src="img/blocks/bley-arrow.png" class="footer__arrow" alt="" title=""></li>
                         <li class="footer__menu-item"><a class="footer__menu-link" href="#">Состав комитетов</a></li>
                         <li class="footer__menu-item"><a class="footer__menu-link" href="#">Работа комитетов</a></li>
                         <li class="footer__menu-item"><a class="footer__menu-link" href="#">Архив повесток заседаний комитетов</a></li>
@@ -383,7 +383,7 @@
                         <li class="footer__menu-item"><a class="footer__menu-link" href="#">Обратная связь</a></li>
                     </ul>
                     <ul class="footer__menu">
-                        <li class="footer__menu-item"><span class="title">О городе</span></li>
+                        <li class="footer__menu-item"><span class="title">О городе</span> <img src="img/blocks/bley-arrow.png" class="footer__arrow" alt="" title=""></li>
                         <li class="footer__menu-item"><a class="footer__menu-link" href="#">Устав города Ульяновска</a></li>
                         <li class="footer__menu-item"><a class="footer__menu-link" href="#">Глава города Ульяновска</a></li>
                         <li class="footer__menu-item"><a class="footer__menu-link" href="#">Почетные граждане</a></li>
@@ -397,7 +397,7 @@
                         <li class="footer__menu-item"><a class="footer__menu-link" href="#">Открытый бюджет</a></li>
                         <li class="footer__menu-item"><a class="footer__menu-link" href="#">Отчеты главы города за 2020г</a></li>
                     </ul>
-                    <p class="footer_copyrigt">© 2022 Группа компаний HeadHunter</p>ff
+                    <p class="footer_copyrigt">© 2022 Ульяновская городская дума</p>
                 </div>
             </footer>
         </main>
