правки по списку

--- a/app/history.html
+++ b/app/history.html
@@ -20,9 +20,9 @@
         <div class="head-block">
             <img class="head-block__image" src="img/25year.jpg" alt="25 лет">
             <ul class="head-block__list">
-                <li class="head-block__text">Перспективный план работы Ульяновской Городской Думы на II полугодие 2021 года</li>
-                <li class="head-block__text">Бюджет г.Ульяновска 2021-2023</li>
-                <li class="head-block__text">О мерах по реализации инициативных проектов на территории муниципального образования «город Ульяновск»</li>
+                <li><a href="http://www.ugd.ru/upload/2022-plan-part1.pdf" rel="noopener" target="_blank" class="head-block__text">Перспективный план работы Ульяновской Городской Думы на I полугодие 2022 года</a></li>
+                <li><a href="http://ugd.ru/upload/resheniya/2021/reshenie-b.zip" rel="noopener" target="_blank" class="head-block__text">Проект бюджета муниципального образования «город Ульяновск» на 2022 год и плановый период 2023 и 2024 годов</a></li>
+                <li><a href="http://ugd.ru/upload/resheniya/2021/reshenie-1.doc" rel="noopener" target="_blank" class="head-block__text">О мерах по реализации инициативных проектов на территории муниципального образования «город Ульяновск»</a></li>
             </ul>
             <div class="head-block__contacts">
                 <a class="head-block__telephone" href="tel:+78422413800" rel="noopener">8 (8422) 41-38-00</a>
@@ -46,12 +46,12 @@
                     <li><a href="activity.html" rel="noopener">Деятельность</a></li>
                     <li><a href="reception.html" rel="noopener">Приёмная</a></li>
                     <li><a href="committees.html" rel="noopener">Комитеты</a></li>
-                    <li><a href="#" rel="noopener">Молодёжная дума</a></li>
-                    <li><a href="#" rel="noopener">О городе</a></li>
+                    <!--<li><a href="#" rel="noopener">Молодёжная дума</a></li>-->
+                    <!--<li><a href="#" rel="noopener">О городе</a></li>-->
                 </ul>
             </nav>
             <aside class="deputat-left">
-                <img src="img/deputat/nozhechkin.jpg" alt="">
+                <a href="deputat.html" rel="noopener"><img src="img/deputat/nozhechkin.jpg" alt=""></a>
                 <span class="deputat-left__name">Ножечкин<br>Илья Владимирович</span>
                 <span class="deputat-left__position">Председатель Ульяновской<br>Городской Думы</span>
             </aside>
@@ -311,6 +311,7 @@
         </main>
         
     </div>
+    <p style="width: 100%;padding: 3px 0px;position: fixed;bottom: 0; left: 0; background-color: red; color: #ffffff;text-align: center; font-size: 38px;">Сайт находится в стадии формирования</p>
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://rawgit.com/RobinHerbots/Inputmask/5.x/dist/jquery.inputmask.js"></script>
