--- a/app/deputats.html
+++ b/app/deputats.html
@@ -20,9 +20,9 @@
         <div class="head-block">
             <img class="head-block__image" src="img/25year.jpg" alt="25 лет">
             <ul class="head-block__list">
-                <li class="head-block__text">Перспективный план работы Ульяновской Городской Думы на II полугодие 2021 года</li>
-                <li class="head-block__text">Бюджет г.Ульяновска 2021-2023</li>
-                <li class="head-block__text">О мерах по реализации инициативных проектов на территории муниципального образования «город Ульяновск»</li>
+                <li><a href="http://www.ugd.ru/upload/2022-plan-part1.pdf" rel="noopener" target="_blank" class="head-block__text">Перспективный план работы Ульяновской Городской Думы на I полугодие 2022 года</a></li>
+                <li><a href="http://ugd.ru/upload/resheniya/2021/reshenie-b.zip" rel="noopener" target="_blank" class="head-block__text">Проект бюджета муниципального образования «город Ульяновск» на 2022 год и плановый период 2023 и 2024 годов</a></li>
+                <li><a href="http://ugd.ru/upload/resheniya/2021/reshenie-1.doc" rel="noopener" target="_blank" class="head-block__text">О мерах по реализации инициативных проектов на территории муниципального образования «город Ульяновск»</a></li>
             </ul>
             <div class="head-block__contacts">
                 <a class="head-block__telephone" href="tel:+78422413800" rel="noopener">8 (8422) 41-38-00</a>
@@ -46,12 +46,12 @@
                     <li><a href="activity.html" rel="noopener">Деятельность</a></li>
                     <li><a href="reception.html" rel="noopener">Приёмная</a></li>
                     <li><a href="committees.html" rel="noopener">Комитеты</a></li>
-                    <li><a href="#" rel="noopener">Молодёжная дума</a></li>
-                    <li><a href="#" rel="noopener">О городе</a></li>
+                    <!--<li><a href="#" rel="noopener">Молодёжная дума</a></li>-->
+                    <!--<li><a href="#" rel="noopener">О городе</a></li>-->
                 </ul>
             </nav>
             <aside class="deputat-left">
-                <img src="img/deputat/nozhechkin.jpg" alt="">
+                <a href="deputat.html" rel="noopener"><img src="img/deputat/nozhechkin.jpg" alt=""></a>
                 <span class="deputat-left__name">Ножечкин<br>Илья Владимирович</span>
                 <span class="deputat-left__position">Председатель Ульяновской<br>Городской Думы</span>
             </aside>
@@ -153,78 +153,148 @@
                     <div id="honorary-citizens" class="my-deputat__content">
                         <ul class="my-deputat__list">
                             <li class="my-deputat__item">
-                                <img class="my-deputat__image" src="img/deputat/1.jpg" alt="" title="">
-                                <h4 class="my-deputat__name">Ножечкин<br>Илья Владимирович</h4>
-                                <span class="my-deputat__post">Председатель Ульяновской Городской Думы</span>
+                                <a href="deputat.html"><img class="my-deputat__image" src="img/deputat/1.jpg" alt="" title=""></a>
+                                <a href="deputat.html"><span class="my-deputat__name">Ножечкин<br>Илья Владимирович</span></a>
+                                <a href="deputat.html"><span class="my-deputat__post">Председатель Ульяновской Городской Думы</span></a>
                                 <span class="my-deputat__district">Округ 29</span>
                                 <a class="my-deputat__email" href="mailto:nozhechkin@ugd.ru">nozhechkin@ugd.ru</a>
                             </li>
                             <li class="my-deputat__item">
-                                <img class="my-deputat__image" src="img/deputat/2.jpg" alt="" title="">
-                                <h4 class="my-deputat__name">Айзатуллина<br>Алсу Феритовна</h4>
-                                <span class="my-deputat__post">Первый заместитель председателя УГД</span>
+                                <a href="deputat.html"><img class="my-deputat__image" src="img/deputat/2.jpg" alt="" title=""></a>
+                                <a href="deputat.html"><span class="my-deputat__name">Айзатуллина<br>Алсу Феритовна</span></a>
+                                <a href="deputat.html"><span class="my-deputat__post">Первый заместитель председателя УГД</span></a>
                                 <span class="my-deputat__district">Округ 22</span>
                                 <a class="my-deputat__email" href="ayzatullina@ugd.ru">ayzatullina@ugd.ru</a>
                             </li>
                             <li class="my-deputat__item">
-                                <img class="my-deputat__image" src="img/deputat/3.jpg" alt="" title="">
-                                <h4 class="my-deputat__name">Крючков<br>Игорь Иванович</h4>
-                                <span class="my-deputat__post">Заместитель председателя УГД</span>
+                                <a href="deputat.html"><img class="my-deputat__image" src="img/deputat/3.jpg" alt="" title=""></a>
+                                <a href="deputat.html"><span class="my-deputat__name">Крючков<br>Игорь Иванович</span></a>
+                                <a href="deputat.html"><span class="my-deputat__post">Заместитель председателя УГД</span></a>
                                 <span class="my-deputat__district">Округ 11</span>
                                 <a class="my-deputat__email" href="kryuchkov@ugd.ru">kryuchkov@ugd.ru</a>
                             </li>
                             <li class="my-deputat__item">
-                                <img class="my-deputat__image" src="img/deputat/4.jpg" alt="" title="">
-                                <h4 class="my-deputat__name">Моргачев<br>Сергей Владимирович</h4>
-                                <span class="my-deputat__post">Заместитель председателя УГД</span>
+                                <a href="deputat.html"><img class="my-deputat__image" src="img/deputat/4.jpg" alt="" title=""></a>
+                                <a href="deputat.html"><span class="my-deputat__name">Моргачев<br>Сергей Владимирович</span></a>
+                                <a href="deputat.html"><span class="my-deputat__post">Заместитель председателя УГД</span></a>
                                 <span class="my-deputat__district">Округ 25</span>
                                 <a class="my-deputat__email" href="morgachev@ugd.ru">morgachev@ugd.ru</a>
                             </li>
                             <li class="my-deputat__item">
-                                <img class="my-deputat__image" src="img/deputat/5.jpg" alt="" title="">
-                                <h4 class="my-deputat__name">Буланов<br>Игорь Николаевич</h4>
-                                <span class="my-deputat__post">Заместитель председателя УГД</span>
+                                <a href="deputat.html"><img class="my-deputat__image" src="img/deputat/5.jpg" alt="" title=""></a>
+                                <a href="deputat.html"><span class="my-deputat__name">Буланов<br>Игорь Николаевич</span></a>
+                                <a href="deputat.html"><span class="my-deputat__post">Заместитель председателя УГД</span></a>
                                 <span class="my-deputat__district">Округ 7</span>
                                 <a class="my-deputat__email" href="bulanov@ugd.ru">bulanov@ugd.ru</a>
+                            </li>
+                            <li class="my-deputat__item">
+                                <a href="deputat.html"><img class="my-deputat__image" src="img/deputat/6.jpg" alt="" title=""></a>
+                                <a href="deputat.html"><span class="my-deputat__name">Долгов<br>Михаил Севостьянович</span></a>
+                                <a href="deputat.html"><span class="my-deputat__post">Заместитель председателя УГД</span></a>
+                                <span class="my-deputat__district">Округ 33</span>
+                                <a class="my-deputat__email" href="dolgov@ugd.ru">dolgov@ugd.ru</a>
+                            </li>
+                            <li class="my-deputat__item">
+                                <a href="deputat.html"><img class="my-deputat__image" src="img/deputat/7.jpg" alt="" title=""></a>
+                                <a href="deputat.html"><span class="my-deputat__name">Зонов<br>Константин Андреевич</span></a>
+                                <a href="deputat.html"><span class="my-deputat__post">Заместитель председателя УГД</span></a>
+                                <span class="my-deputat__district">Округ 30</span>
+                                <a class="my-deputat__email" href="zonow@ugd.ru">zonow@ugd.ru</a>
+                            </li>
+                            <li class="my-deputat__item">
+                                <a href="deputat.html"><img class="my-deputat__image" src="img/deputat/8.jpg" alt="" title=""></a>
+                                <a href="deputat.html"><span class="my-deputat__name">Седов<br>Денис Константинович</span></a>
+                                <a href="deputat.html"><span class="my-deputat__post">Заместитель председателя УГД</span></a>
+                                <span class="my-deputat__district">Округ 26</span>
+                                <a class="my-deputat__email" href="sedov@ugd.ru">sedov@ugd.ru</a>
+                            </li>
+                            <li class="my-deputat__item">
+                                <a href="deputat.html"><img class="my-deputat__image" src="img/deputat/9.jpg" alt="" title=""></a>
+                                <a href="deputat.html"><span class="my-deputat__name">Абитов<br>Рамиль Загитович</span></a>
+                                <a href="deputat.html"><span class="my-deputat__post">Депутат УГД</span></a>
+                                <span class="my-deputat__district">Округ 4</span>
+                                <a class="my-deputat__email" href="abitov@ugd.ru">abitov@ugd.ru</a>
+                            </li>
+                            <li class="my-deputat__item">
+                                <a href="deputat.html"><img class="my-deputat__image" src="img/deputat/10.jpg" alt="" title=""></a>
+                                <a href="deputat.html"><span class="my-deputat__name">Анохин<br>Константин Евгеньевич</span></a>
+                                <a href="deputat.html"><span class="my-deputat__post">Депутат УГД</span></a>
+                                <span class="my-deputat__district">Округ 2</span>
+                                <a class="my-deputat__email" href="anohin@ugd.ru">anohin@ugd.ru</a>
                             </li>
                         </ul>
                     </div>
                     <div id="members" class="my-deputat__content">
                         <ul class="my-deputat__list">
                             <li class="my-deputat__item">
-                                <img class="my-deputat__image" src="img/deputat/1.jpg" alt="" title="">
-                                <h4 class="my-deputat__name">Ножечкин<br>Илья Владимирович</h4>
-                                <span class="my-deputat__post">Председатель Ульяновской Городской Думы</span>
+                                <a href="deputat.html"><img class="my-deputat__image" src="img/deputat/1.jpg" alt="" title=""></a>
+                                <a href="deputat.html"><span class="my-deputat__name">Ножечкин<br>Илья Владимирович</span></a>
+                                <a href="deputat.html"><span class="my-deputat__post">Председатель Ульяновской Городской Думы</span></a>
                                 <span class="my-deputat__district">Округ 29</span>
                                 <a class="my-deputat__email" href="mailto:nozhechkin@ugd.ru">nozhechkin@ugd.ru</a>
                             </li>
                             <li class="my-deputat__item">
-                                <img class="my-deputat__image" src="img/deputat/2.jpg" alt="" title="">
-                                <h4 class="my-deputat__name">Айзатуллина<br>Алсу Феритовна</h4>
-                                <span class="my-deputat__post">Первый заместитель председателя УГД</span>
+                                <a href="deputat.html"><img class="my-deputat__image" src="img/deputat/2.jpg" alt="" title=""></a>
+                                <a href="deputat.html"><span class="my-deputat__name">Айзатуллина<br>Алсу Феритовна</span></a>
+                                <a href="deputat.html"><span class="my-deputat__post">Первый заместитель председателя УГД</span></a>
                                 <span class="my-deputat__district">Округ 22</span>
                                 <a class="my-deputat__email" href="ayzatullina@ugd.ru">ayzatullina@ugd.ru</a>
                             </li>
                             <li class="my-deputat__item">
-                                <img class="my-deputat__image" src="img/deputat/3.jpg" alt="" title="">
-                                <h4 class="my-deputat__name">Крючков<br>Игорь Иванович</h4>
-                                <span class="my-deputat__post">Заместитель председателя УГД</span>
+                                <a href="deputat.html"><img class="my-deputat__image" src="img/deputat/3.jpg" alt="" title=""></a>
+                                <a href="deputat.html"><span class="my-deputat__name">Крючков<br>Игорь Иванович</span></a>
+                                <a href="deputat.html"><span class="my-deputat__post">Заместитель председателя УГД</span></a>
                                 <span class="my-deputat__district">Округ 11</span>
                                 <a class="my-deputat__email" href="kryuchkov@ugd.ru">kryuchkov@ugd.ru</a>
                             </li>
                             <li class="my-deputat__item">
-                                <img class="my-deputat__image" src="img/deputat/4.jpg" alt="" title="">
-                                <h4 class="my-deputat__name">Моргачев<br>Сергей Владимирович</h4>
-                                <span class="my-deputat__post">Заместитель председателя УГД</span>
+                                <a href="deputat.html"><img class="my-deputat__image" src="img/deputat/4.jpg" alt="" title=""></a>
+                                <a href="deputat.html"><span class="my-deputat__name">Моргачев<br>Сергей Владимирович</span></a>
+                                <a href="deputat.html"><span class="my-deputat__post">Заместитель председателя УГД</span></a>
                                 <span class="my-deputat__district">Округ 25</span>
                                 <a class="my-deputat__email" href="morgachev@ugd.ru">morgachev@ugd.ru</a>
                             </li>
                             <li class="my-deputat__item">
-                                <img class="my-deputat__image" src="img/deputat/5.jpg" alt="" title="">
-                                <h4 class="my-deputat__name">Буланов<br>Игорь Николаевич</h4>
-                                <span class="my-deputat__post">Заместитель председателя УГД</span>
+                                <a href="deputat.html"><img class="my-deputat__image" src="img/deputat/5.jpg" alt="" title=""></a>
+                                <a href="deputat.html"><span class="my-deputat__name">Буланов<br>Игорь Николаевич</span></a>
+                                <a href="deputat.html"><span class="my-deputat__post">Заместитель председателя УГД</span></a>
                                 <span class="my-deputat__district">Округ 7</span>
                                 <a class="my-deputat__email" href="bulanov@ugd.ru">bulanov@ugd.ru</a>
+                            </li>
+                            <li class="my-deputat__item">
+                                <a href="deputat.html"><img class="my-deputat__image" src="img/deputat/6.jpg" alt="" title=""></a>
+                                <a href="deputat.html"><span class="my-deputat__name">Долгов<br>Михаил Севостьянович</span></a>
+                                <a href="deputat.html"><span class="my-deputat__post">Заместитель председателя УГД</span></a>
+                                <span class="my-deputat__district">Округ 33</span>
+                                <a class="my-deputat__email" href="dolgov@ugd.ru">dolgov@ugd.ru</a>
+                            </li>
+                            <li class="my-deputat__item">
+                                <a href="deputat.html"><img class="my-deputat__image" src="img/deputat/7.jpg" alt="" title=""></a>
+                                <a href="deputat.html"><span class="my-deputat__name">Зонов<br>Константин Андреевич</span></a>
+                                <a href="deputat.html"><span class="my-deputat__post">Заместитель председателя УГД</span></a>
+                                <span class="my-deputat__district">Округ 30</span>
+                                <a class="my-deputat__email" href="zonow@ugd.ru">zonow@ugd.ru</a>
+                            </li>
+                            <li class="my-deputat__item">
+                                <a href="deputat.html"><img class="my-deputat__image" src="img/deputat/8.jpg" alt="" title=""></a>
+                                <a href="deputat.html"><span class="my-deputat__name">Седов<br>Денис Константинович</span></a>
+                                <a href="deputat.html"><span class="my-deputat__post">Заместитель председателя УГД</span></a>
+                                <span class="my-deputat__district">Округ 26</span>
+                                <a class="my-deputat__email" href="sedov@ugd.ru">sedov@ugd.ru</a>
+                            </li>
+                            <li class="my-deputat__item">
+                                <a href="deputat.html"><img class="my-deputat__image" src="img/deputat/9.jpg" alt="" title=""></a>
+                                <a href="deputat.html"><span class="my-deputat__name">Абитов<br>Рамиль Загитович</span></a>
+                                <a href="deputat.html"><span class="my-deputat__post">Депутат УГД</span></a>
+                                <span class="my-deputat__district">Округ 4</span>
+                                <a class="my-deputat__email" href="abitov@ugd.ru">abitov@ugd.ru</a>
+                            </li>
+                            <li class="my-deputat__item">
+                                <a href="deputat.html"><img class="my-deputat__image" src="img/deputat/10.jpg" alt="" title=""></a>
+                                <a href="deputat.html"><span class="my-deputat__name">Анохин<br>Константин Евгеньевич</span></a>
+                                <a href="deputat.html"><span class="my-deputat__post">Депутат УГД</span></a>
+                                <span class="my-deputat__district">Округ 2</span>
+                                <a class="my-deputat__email" href="anohin@ugd.ru">anohin@ugd.ru</a>
                             </li>
                         </ul>
                     </div>
@@ -298,6 +368,7 @@
         </main>
         
     </div>
+    <p style="width: 100%;padding: 3px 0px;position: fixed;bottom: 0; left: 0; background-color: red; color: #ffffff;text-align: center; font-size: 38px;">Сайт находится в стадии формирования</p>
 <!--Swiper Slider-->
 <script src="js/swiper-bundle.min.js"></script>
 
