--- a/app/index.html
+++ b/app/index.html
@@ -17,14 +17,41 @@
             <a href="/" class="logo-block__link" rel="noopener">
                 <img src="img/logo.png" alt="Ульяновская городская дума">
             </a>
+            <img class="logo-block__image" src="/img/25year.png" alt="25 лет служим городу" title="25 лет служим городу">
         </div>
         <div class="head-block">
-            <img class="head-block__image" src="img/25year.jpg" alt="25 лет">
-            <ul class="head-block__list">
+            <div class="swiper head-block__list">
+                <div class="swiper-wrapper">
+                    <div class="main-slider__item swiper-slide">
+                        <a href="http://www.ugd.ru/upload/2022-plan-part1.pdf" rel="noopener" target="_blank" class="head-block__text">Перспективный план работы Ульяновской Городской Думы на I полугодие 2022 года</a>
+                    </div>
+                    <div class="main-slider__item swiper-slide">
+                        <a href="http://ugd.ru/upload/resheniya/2021/reshenie-b.doc" rel="noopener" target="_blank" class="head-block__text">Проект бюджета муниципального образования «город Ульяновск» на 2022 год и плановый период 2023 и 2024 годов</a>
+                    </div>
+                    <div class="main-slider__item swiper-slide">
+                        <a href="http://ugd.ru/upload/ini-projects/reshenie-89.doc" rel="noopener" target="_blank" class="head-block__text">О мерах по реализации инициативных проектов на территории муниципального образования «город Ульяновск»</a>
+                    </div>
+                    <div class="main-slider__item swiper-slide">
+                        <a href="http://ugd.ru/upload/op-09-2021.pdf" rel="noopener" target="_blank" class="head-block__text">СПИСОК членов Общественной палаты муниципального образования «город Ульяновск» третьего созыва</a>
+                    </div>
+                    <div class="main-slider__item swiper-slide">
+                        <a href="http://ugd.ru/upload/ukaz-16-01-17.pdf" rel="noopener" target="_blank" class="head-block__text">Указ Президента РФ "Об утверждении основ государст-венной политики регионального развития Российской Федерации на период до 2025 года"</a>
+                    </div>
+                    <div class="main-slider__item swiper-slide">
+                        <a href="/" rel="noopener" target="_blank" class="head-block__text">Общественное обсуждение нормативных правовых актов Ульяновской Городской Думы</a>
+                    </div>
+                </div>
+                <!-- If we need navigation buttons -->
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
+            </div>
+            <!--
+            <ul class="swiper head-block__list">
                 <li><a href="http://www.ugd.ru/upload/2022-plan-part1.pdf" rel="noopener" target="_blank" class="head-block__text">Перспективный план работы Ульяновской Городской Думы на I полугодие 2022 года</a></li>
                 <li><a href="http://ugd.ru/upload/resheniya/2021/reshenie-b.zip" rel="noopener" target="_blank" class="head-block__text">Проект бюджета муниципального образования «город Ульяновск» на 2022 год и плановый период 2023 и 2024 годов</a></li>
                 <li><a href="http://ugd.ru/upload/resheniya/2021/reshenie-1.doc" rel="noopener" target="_blank" class="head-block__text">О мерах по реализации инициативных проектов на территории муниципального образования «город Ульяновск»</a></li>
             </ul>
+            -->
             <div class="head-block__contacts">
                 <a class="head-block__telephone" href="tel:+78422413800" rel="noopener">8 (8422) 41-38-00</a>
                 <a class="head-block__email" href="mailto:duma@ugd.ru" rel="noopener">duma@ugd.ru</a>
